<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_lightbulb"
        android:title="@string/theme"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
